--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>14.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-jaxrs</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
     </dependencies>
 
 </project>
